# stray_recipe_manager

./: .gitignore  README.md  mypy.ini  pyproject.toml  tox.ini
src/jolly_recipe_manager/: __init__.py  loader.py  recipe.py  units.py
src/stray_recipe_manager/: __init__.py  cli.py  formatter.py  loader.py  recipe.py  server.py  storage.py  units.py
src/stray_recipe_manager/templates/: layout.html  recipe.html  recipe_index.html
tests/: example_recipe_rice_pilaf.toml  example_unit_prefs.toml  test_formatter.py  test_storage.py  test_unit_conversion.py
