[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "stray_recipe_manager"
author = "Jonathan Robey"
author-email = "class4kayaker@gmail.com"
home-page = "https://github.com/class4kayaker/recipe_manager"
description-file = "README.md"
license = "MIT"
requires-python = "~=3.6"
requires = [
    "attrs",
    "pint",
    "toml",
]

[tool.flit.entrypoints."console_scripts"]
stray_recipe_manager = "stray_recipe_manager.cli:dispatch"

[tool.black]
line-length=79
